test/sema/typeck/pattern/in-if-unknown-in-else.out
error: unknown identifier `y`.
--> in-if-unknown-in-else.dora:6:9
 |         0
 |     } else {
 |         y
           ~
 |     }
 | }
1 error found.
