test/sema/typeck/pattern/in-if-unknown-in-else.dora
enum Foo { A(Int64), B }
fn f(x: Foo): Int64 {
    if x is Foo::A(y) {
        0
    } else {
        y
    }
}
